@@ -1,11 +1,0 @@
-/**
- * Spring's repackaging of {@code org.objectweb.asm.*} (for internal use only).
- * <p>This repackaging technique avoids any potential conflicts with
- * dependencies on ASM at the application level or from other third-party
- * libraries and frameworks.
- * <p>As this repackaging happens at the classfile level, sources and Javadoc
- * are not available here. See the original ObjectWeb
- * <a href="http://asm.ow2.org/asm223/javadoc/user">ASM 2.2.3 Javadoc</a>
- * for details when working with these classes.
- */
-package org.springframework.asm;
