@@ -1,0 +1,38 @@
+/*
+ * Copyright 2002-2012 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.springframework.asm;
+
+/**
+ * Utility class exposing constants related to Spring's internal repackaging of the ASM
+ * bytecode manipulation library.
+ *
+ * <p>See <a href="package-summary.html">package-level Javadoc</a> for more
+ * information on {@code org.springframework.asm}.
+ *
+ * @author Chris Beams
+ * @since 3.2
+ */
+public final class SpringAsmInfo {
+
+	/**
+	 * The ASM version used internally throughout the framework.
+	 *
+	 * @see Opcodes#ASM4
+	 */
+	public static final int ASM_VERSION = Opcodes.ASM4;
+
+}
